--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "secret_contract_example"
+name = "secret_rps"
 version = "0.1.0"
-authors = ["SecretTemplateExample"]
-edition = "2018"
-
+authors = [""]
+edition = "2021"
+resolver = "2"
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
   "contract.wasm",
-  "hash.txt",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -36,24 +35,29 @@ schema = ["cosmwasm-schema"]
 [dependencies]
 serde = { version = "1.0.147", default-features = false, features = ["derive"] }
 schemars = "0.8.11"
-cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367" }
-cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367" }
+cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "d2a02cf9c734c1aa86b0d1c6607ece4317892dbb", features = ["random"] }
+cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", rev = "d2a02cf9c734c1aa86b0d1c6607ece4317892dbb" }
+
 cw-storage-plus = { version = "0.14.0", default-features = false }
+
+# secret-toolkit-storage = { git = "https://github.com/scrtlabs/secret-toolkit" }
+
+# custom deps
+base32 = "0.4.0"
+rand_core = { version = "0.6.4", default-features = false }
+rand_chacha = { version = "0.3.1", default-features = false }
+sha2 = "0.10.6"
+thiserror = "1.0"
 
 # Used only for schema generation
 cosmwasm-schema = { version = "1.1.0", optional = true }
 
-# Uncomment these for some common extra tools
-secret-toolkit-crypto = { version = "0.6.0", features = ["rand", "hash"]}
-
-# custom deps
-base32 = "0.4.0"
-thiserror = "1.0"
-
 [patch.crates-io]
-cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "f7e2b1dbf11e113e258d796288752503a5012367", package = "cosmwasm-std" }
+cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "d2a02cf9c734c1aa86b0d1c6607ece4317892dbb" }
+
 
 [[bin]]
 name = "schema"
 required-features = ["schema"]
+
 
