attempt to auto-install ui packages in gitpod

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,8 @@ tasks:
   - command: |
       cd /home/gitpod/ && SCRT_SGX_STORAGE=/opt/secret/.sgx_secrets /home/gitpod/bootstrap_init.sh false
   - command: |
+      cd ui/ && npm i
+  - command: |
       echo "Hello and welcome to the Secret Network"
       
 vscode:
