--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,11 +1,14 @@
 image: ghcr.io/scrtlabs/localsecret-gitpod:v1.9.0-beta.1
 
 tasks:
-  - command: |
+  - name: Faucet
+    command: |
       node /home/gitpod/faucet_server.js
-  - command: |
+  - name: Local Secret Node
+    command: |
       cd /home/gitpod/ && SCRT_SGX_STORAGE=/opt/secret/.sgx_secrets /home/gitpod/bootstrap_init.sh false
-  - command: |
+  - name: Open Terminal
+    command: |
       echo "Hello and welcome to the Secret Network"
       
 vscode:
