--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,7 @@ tasks:
       node /home/gitpod/faucet_server.js
   - name: Local Secret Node
     command: |
+      sed -i -e 's/cors_allowed_origins = \[\]/cors_allowed_origin = \[\"\*\"\]/' /home/gitpod/.secretd/config/config.toml
       cd /home/gitpod/ && SCRT_SGX_STORAGE=/opt/secret/.sgx_secrets /home/gitpod/bootstrap_init.sh false
   - name: Open Terminal
     command: |
