--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -12,13 +12,13 @@ tasks:
   - name: Open Terminal
     command: |
       echo "Hello and welcome to the Secret Network"
-      
+
 vscode:
   extensions:
     - rust-lang.rust
     - serayuzgur.crates
     - bungcip.better-toml
-      
+
 jetbrains:
   intellij:
     plugins:
@@ -29,17 +29,22 @@ jetbrains:
 ports:
   - port: 26657
     onOpen: ignore
+    visibility: public
   - port: 9090-9091
     onOpen: ignore
   - port: 5000
+    visibility: public
     onOpen: ignore
   - port: 1317
     onOpen: ignore
+    visibility: public
   - port: 3000
     onOpen: ignore
+    visibility: public
   - port: 24000
     onOpen: ignore
   - port: 6060
     onOpen: ignore
   - port: 1316
     onOpen: ignore
+    visibility: public
